name:                blacktip
version:             0.1.0.0
synopsis:            Decentralized, k-ordered unique ID generator.
description:         Clone of Boundary's Flake unique id service for Haskell, itself based on Snowflake.
homepage:            https://github.com/bitemyapp/blacktip
license:             Apache-2.0
license-file:        LICENSE
author:              Chris Allen
maintainer:          cma@bitemyapp.com
copyright:           2014, Chris Allen
category:            Database
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/bitemyapp/blacktip.git

library
  ghc-options: -Wall -threaded
  default-extensions:  OverloadedStrings
  build-depends:       base             >=4.7 && <5
                     , bitwise          >= 0.1.0.0
                     , locators         >= 0.2.4.2
                     , network-info     >= 0.2
                     , safe             >= 0.3
                     , split            >= 0.2.0
                     , system-fileio    >= 0.3
                     , system-filepath
                     , time             >= 1.4.0
                     , deepseq-generics >= 0.1.1.0
                     , deepseq
                     , bytestring
  hs-source-dirs:      src
  exposed-modules:     Database.Blacktip
                     , Database.Blacktip.Types
  default-language:    Haskell2010

test-suite tests
  ghc-options: -Wall
  default-extensions:  OverloadedStrings
  type: exitcode-stdio-1.0
  main-is: tests.hs
  hs-source-dirs: tests
  build-depends:       base,
                       blacktip,
                       hspec >= 1.8
  default-language:    Haskell2010

benchmark benches
  type:           exitcode-stdio-1.0
  main-is:        benches.hs
  ghc-options:    -Wall -O2 -threaded
  hs-source-dirs: benchmarks
  build-depends:
    base,
    blacktip,
    criterion,
    network-info,
    time,
    async
  default-language:    Haskell2010
